# PetPulse-Server

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.server  Dockerfile.worker  audit.toml  docker-compose.yml  test_critical_alert.sh  test_e2e.sh  test_gemini_phase1.sh  test_phases_1_to_3.sh  verify_emergency_end_to_end.sh  verify_escalation.sh  verify_queue_depth.sh  verify_webhook_alerts.sh
.github/workflows/: build-deploy.yml  pr-check.yml
observability/: grafana-dashboards.yaml  grafana-datasources.yaml  prometheus.yaml  promtail.yaml  tempo.yaml
src/: gemini.rs  lib.rs  main.rs  metrics.rs  telemetry.rs  worker.rs
src/agent/: comfort_loop.rs  mod.rs
src/api/: auth.rs  critical_alerts.rs  daily_digest.rs  emergency_contacts.rs  middleware.rs  mod.rs  pet.rs  quick_actions.rs  user.rs  video.rs  webhook.rs
src/entities/: alerts.rs  daily_digest.rs  emergency_contact.rs  mod.rs  pet.rs  pet_video.rs  prelude.rs  quick_action.rs  user.rs
src/migrator/: m20260101_000001_create_table.rs  m20260110_000002_create_daily_digest.rs  m20260123_000003_create_clips.rs  m20260123_000004_alter_pet_videos.rs  m20260123_000005_alter_daily_digest.rs  m20260127_000001_create_alerts_table.rs  m20260128_000001_enhance_alerts_table.rs  m20260130_000001_create_emergency_contacts.rs  m20260130_000002_create_quick_actions.rs  mod.rs
src/notifications/: mod.rs  pubsub_client.rs  templates.rs  twilio.rs
