[package]
name = "petpulse-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "petpulse_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json" ] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
argon2 = "0.5"
axum-extra = { version = "0.9", features = ["cookie"] }
tower-cookies = "0.10"

sea-orm-migration = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"], default-features = false }
redis = { version = "0.27", features = ["tokio-comp"] }
google-cloud-storage = "0.23"
google-cloud-auth = "0.23"
mime = "0.3"
mime_guess = "2.0"

# Observability
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.14"
tracing-opentelemetry = "0.23"
axum-prometheus = "0.6"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
